--- a/DT/app/src/main/res/layout/activity_search_view.xml
+++ b/DT/app/src/main/res/layout/activity_search_view.xml
@@ -5,20 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchView">
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/mainAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="DT"
-            app:menu="@menu/main_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            />
-
-    </com.google.android.material.appbar.AppBarLayout>
 
     <!-- Note: A RecyclerView can also be used -->
     <androidx.core.widget.NestedScrollView
@@ -27,22 +13,9 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <!-- Scrollable content -->
-
-    </androidx.core.widget.NestedScrollView>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint=""
-        app:layout_anchor="@+id/nestedScrollView2"
-        app:layout_anchorGravity="center">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <SearchView
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
