--- a/DT/app/src/main/res/layout/activity_main.xml
+++ b/DT/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
             android:layout_marginTop="100dp"
+            android:onClick="Click"
             android:text="Anh - Việt"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
