--- a/DT/app/src/main/res/layout/activity_eng_vie.xml
+++ b/DT/app/src/main/res/layout/activity_eng_vie.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchView">
+    tools:context=".Eng_Vie">
 
     <SearchView
-        android:id="@+id/search_view_1"
+        android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
