--- a/DT/app/src/main/res/layout/activity_search_result.xml
+++ b/DT/app/src/main/res/layout/activity_search_result.xml
@@ -32,30 +32,42 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/txtspelling"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_height="20sp"
+                android:text=""
+                android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/txtCategory"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="20sp"
+                android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/txtTranslations"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_height="26sp"
+                android:text=""
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/txtLookup"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_height="26sp"
+                android:text=""
+                android:textColor="@android:color/holo_green_light"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/txtExamples"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_weight="26sp"
+                android:textSize="20sp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
