--- a/DT/app/src/main/res/layout/activity_search_result.xml
+++ b/DT/app/src/main/res/layout/activity_search_result.xml
@@ -11,12 +11,17 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title=""
             app:menu="@menu/top_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-        />
+            app:title="" />
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/loading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true" />
+
 
     </com.google.android.material.appbar.AppBarLayout>
 
