--- a/DT/app/src/main/res/layout/activity_search_result.xml
+++ b/DT/app/src/main/res/layout/activity_search_result.xml
@@ -16,10 +16,12 @@
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/top_app_bar"
             app:title="" />
+
         <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/loading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:indicatorColor="@color/purple_500"
             android:indeterminate="true" />
 
 
@@ -74,7 +76,6 @@
                 android:textSize="20sp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
