--- a/DT/app/src/main/res/layout/activity_multi_language.xml
+++ b/DT/app/src/main/res/layout/activity_multi_language.xml
@@ -12,6 +12,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <com.google.android.material.progressindicator.LinearProgressIndicator
+                android:id="@+id/loading2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"/>
 
             <SearchView
                 android:id="@+id/search_view"
@@ -31,6 +36,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dialog" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txtResult"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
