--- a/DT/app/src/main/res/layout/activity_multi_language.xml
+++ b/DT/app/src/main/res/layout/activity_multi_language.xml
@@ -20,6 +20,9 @@
 
             <SearchView
                 android:id="@+id/search_view"
+                android:searchSuggestAuthority="com.example.dt.MySuggestionProvider"
+                android:searchSuggestSelection=" ?"
+                android:showAsAction="ifRoom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
