--- a/DT/app/src/main/res/layout/activity_multi_language.xml
+++ b/DT/app/src/main/res/layout/activity_multi_language.xml
@@ -18,19 +18,15 @@
                 android:layout_height="wrap_content"
                 android:indeterminate="true"/>
 
-            <SearchView
-                android:id="@+id/search_view"
-                android:searchSuggestAuthority="com.example.dt.MySuggestionProvider"
-                android:searchSuggestSelection=" ?"
-                android:showAsAction="ifRoom"
+            <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:stretchColumns="0, 1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:stretchColumns="0, 1">
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
+                    android:layout_height="match_parent">
 
                     <Spinner
                         android:id="@+id/spinner"
