--- a/DT/app/src/main/res/layout/activity_search_result.xml
+++ b/DT/app/src/main/res/layout/activity_search_result.xml
@@ -37,43 +37,95 @@
         <!-- Scrollable content -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtspelling"
-                android:layout_width="match_parent"
-                android:layout_height="20sp"
-                android:text=""
-                android:textColor="@color/black" />
+            <View
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0" />
 
-            <TextView
-                android:id="@+id/txtCategory"
-                android:layout_width="match_parent"
-                android:layout_height="20sp"
-                android:textColor="@color/black" />
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txtTranslations"
-                android:layout_width="match_parent"
-                android:layout_height="26sp"
-                android:text=""
-                android:textColor="@android:color/holo_green_dark"
-                android:textSize="20sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txtLookup"
-                android:layout_width="match_parent"
-                android:layout_height="26sp"
-                android:text=""
-                android:textColor="@android:color/holo_green_light"
-                android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text="[" />
 
-            <TextView
-                android:id="@+id/txtExamples"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp" />
+                    <TextView
+                        android:id="@+id/txtspelling"
+                        android:layout_width="wrap_content"
+                        android:layout_height="20sp"
+                        android:text=""
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="]" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/txtCategory"
+                    android:layout_width="match_parent"
+                    android:layout_height="20sp"
+                    android:textColor="@color/black" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:text=" => " />
+
+                    <TextView
+                        android:id="@+id/txtTranslations"
+                        android:layout_width="match_parent"
+                        android:layout_height="26sp"
+                        android:text=""
+                        android:textColor="@android:color/holo_green_dark"
+                        android:textSize="20sp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/txtLookup"
+                    android:layout_width="match_parent"
+                    android:layout_height="26sp"
+                    android:text=""
+                    android:textColor="@android:color/holo_green_light"
+                    android:textSize="20sp" />
+
+                <TextView
+                    android:id="@+id/txtExamples"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
