--- a/DT/app/src/main/res/layout/activity_main.xml
+++ b/DT/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="100dp"
         android:onClick="Click1"
-        android:text="Anh - Việt"
+        android:text="Từ điển Anh - Việt"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,7 +29,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginTop="150dp"
         android:onClick="Click2"
-        android:text="Multi_language"
+        android:text="Dịch tự động"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
