--- a/DT/app/src/main/res/layout/activity_multi_language.xml
+++ b/DT/app/src/main/res/layout/activity_multi_language.xml
@@ -11,6 +11,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:orientation="vertical">
             <com.google.android.material.progressindicator.LinearProgressIndicator
                 android:id="@+id/loading2"
@@ -18,25 +21,39 @@
                 android:layout_height="wrap_content"
                 android:indeterminate="true"/>
 
-            <SearchView
-                android:id="@+id/search_view"
+            <EditText
+                android:id="@+id/text_content"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/back">
+                android:inputType="textMultiLine"
+                android:lines="8"
+                android:textSize="20dp"
+                android:gravity="left|top"
+                android:hint="Nhập vào đây"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                android:textColorHighlight="#000000"
+                android:layout_height="wrap_content"/>
 
-            </SearchView>
 
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:spinnerMode="dialog" />
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:spinnerMode="dialog"/>
 
             <TextView
                 android:id="@+id/txtResult"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="200dp"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingRight="10dp"
+                android:textSize="20dp"
                 android:background="@drawable/back" />
 
             <Spinner
